# codemode

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.sh  test_auto_learning.py  test_streaming.py
src/mcp_codemode/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_server.py
